trocando cores, testes

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --branco-principal: #FFFFFF;
     --cinza-secundario: #c0c0c0;
     --botao-azul: #1676f7;
-    --cor-de-fundo: #00030c;
+    --cor-de-fundo: #000205;
     --fonte-principal: 'Inter';
 }
 
